--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -50,13 +50,55 @@ body::before, body::after {
                 background-size: 40%;
                 padding-bottom: 70px;
                 width: 300px;
+
+                .gobackbutton {
+                    margin-top: 100px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 250px;
+                    margin-left: 25px;
+                    margin-bottom: 10px;
+
+                    a {
+                        padding: 7px;
+                        padding-right: 10px; 
+                        padding-left: 10px;
+                        background-color: #F39994;
+                        border-radius: 10px;
+
+                        color: #162D06;
+                        text-decoration: none;
+                        font-weight: bold;
+
+                        font-size: 14px;
+
+                        i {
+                            display: none;
+                            margin-right: 7px;
+                            font-size: 13px;
+                        }
+                    }
+
+                    &:hover {
+                        a {
+                            transform: scale(1.2);
+                            transition: 0.25s;
+                        } 
+
+                        i {
+                            transition: 0.25s;
+                            display: inline;
+                        }
+                    }
+                }
     
                 .right-s-box {
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    margin-top: 120px;
+                    margin-top: 0px;
     
                     .right-s-text {
                         background-color: #F2FFEA;
