--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -58,7 +58,7 @@ body::before, body::after {
                     align-items: center;
                     width: 250px;
                     margin-left: 25px;
-                    margin-bottom: 10px;
+                    margin-bottom: 15px;
 
                     a {
                         padding: 7px;
@@ -120,8 +120,8 @@ body::before, body::after {
                             margin-bottom: 0px;
                             margin-top: 10px;
                             margin-left: 10px;
-                            margin-right: 5px;
-                            font-size: 15px;
+                            margin-right: 10px;
+                            font-size: 14px;
                         }
     
                         .right-s-info {
@@ -163,21 +163,55 @@ body::before, body::after {
             justify-content: center;
             align-items: center;
             gap: 25px;
+            margin-top: 40px;
 
-            .filter-date-abc {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
+            .filter-abc {
+                
+                .filter-abc-box {
+                    background-color: white;
+                    padding: 5px;
+                    width: 150px;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    box-shadow: 5px 1px 15px 5px rgba(2, 101, 19, 0.154);
+
+                    color: #162D06;
+
+                    border: hidden;
+
+                    option {
+                        background-color: #d5eac7;
+                        border: hidden;
+                        color: #162D06;
+                    }
+
+                }
             }
 
             .applyfilters {
 
-                border-radius: 10px;
+                border-radius: 5px;
                 padding: 5px;
                 background-color: #F39994;
                 border: hidden;
                 width: 75px;
                 font-weight: bold;
+
+                cursor: pointer;
+                color: #162D06;
+                box-shadow: 5px 1px 15px 5px rgba(2, 101, 19, 0.154);
+
+                &:hover {
+                    transform: scale(1.2);
+                    transition: 0.25s;
+
+                    background-color: #a5eb77;
+
+                    background-image: linear-gradient(to bottom, rgba(95, 132, 71, 0.65), rgba(95, 132, 71, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                    background-size: 200%;
+
+                    color: white;
+                }
             }
         }
 
