--- a/CSS/Admin/admin-create.css
+++ b/CSS/Admin/admin-create.css
@@ -75,23 +75,50 @@ body {
 }
 
 .gobackbutton {
+    margin-top: 100px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    text-decoration: none;
-    color: #162D06;
-    position: absolute;
-    top: 120px;
-    width: 100vh;
-    i {
-        margin-right: 10px;
-        background-color: #BEE6C6;
-        border-radius: 99px;
-        width: 25px;
-        height: 25px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    width: 250px;
+    margin-left: 25px;
+    margin-bottom: 15px;
+
+    a {
+        padding: 7px;
+        padding-right: 10px; 
+        padding-left: 10px;
+        background-color: #F39994;
+        border-radius: 10px;
+
+        color: #162D06;
+        text-decoration: none;
+        font-weight: bold;
+
+        font-size: 14px;
+
+        i {
+            display: none;
+            margin-right: 7px;
+            font-size: 13px;
+        }
+    }
+
+    &:hover {
+        a {
+            transform: scale(1.2);
+            transition: 0.25s;
+
+            background-color: #a5eb77;
+
+            background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+            background-size: 200%;
+
+            color: white;
+        } 
+
+        i {
+            display: inline;
+        }
     }
 }
 
