--- a/CSS/Admin/admin-login.css
+++ b/CSS/Admin/admin-login.css
@@ -8,7 +8,6 @@ body {
 
 .welcome-logo {
 
-    /*background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);*/
     background-color: #E4F4D9;
     background-size: 13.5%;
     width: 100%;
@@ -79,21 +78,22 @@ body {
         height: 100%;
 
         .logo-inside-frame {
+            position: absolute;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            width: 100%;
-            /*background-color: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65));*/
 
+            width: 250px;
+            height: 100vh;
     
             .login-form {
 
                 display: flex;
                 flex-direction: column;
+                justify-content: center;
+                align-items: center;
                 gap: 30px;
-                position: absolute;
 
                 .login-form-username, .login-form-password {
                     display: flex;
@@ -116,12 +116,15 @@ body {
                 }
 
                 .login-button {
-                    margin-top: 75px;
+                    margin-top: 50px;
                     background-color: #F39994;
                     box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
                     border-radius: 10px;
                     padding: 5px;
                     border: none;
+
+                    width: 150px;
+                    height: 35px;
 
                     color: #162D06;
                     font-weight: bold;
@@ -134,104 +137,62 @@ body {
 
                         font-size: 17px;
                         cursor: pointer;
+
+                        background-color: #a5eb77;
+
+                        background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                        background-size: 100%;
+
+                        color: white;
                     }
                 }
-            }
-        }
-    }
 
-}
-
-/*
-.welcome-logo {
-
-    background-image: linear-gradient(to bottom, rgba(242, 255, 234, 0.75), rgba(242, 255, 234, 0.75)),url(/MEDIA/background/backgroundleafes.png);
-    background-size: 22%;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    .welcome-background {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .framed-logo {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        .frame {
-            position: absolute;
-            width: 1000px;
-            height: 685px;
-        }
-
-        .logo-inside-frame {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: #F7FFF2;
-            width: 875px;
-            height: 575px;
-            border-radius: 10px;
-
-            .login-form {
-                display: flex;
-                flex-direction: column;
-                gap: 30px;
-                position: absolute;
-
-                .login-form-username, .login-form-password {
+                .gobackbutton {
                     display: flex;
                     flex-direction: column;
-                    gap: 10px;
+                    align-items: center;
+                    margin-bottom: 15px;
 
-                    color: #162D06;
-
-                    input {
-                        background-color: white;
+                    a {
+                        padding: 7px;
+                        padding-right: 10px; 
+                        padding-left: 10px;
+                        background-color: #F39994;
                         border-radius: 10px;
-                        padding: 10px;
-                        border: none;
-                        font-size: 12px;
 
                         color: #162D06;
+                        text-decoration: none;
+                        font-weight: bold;
 
-                        box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
+                        font-size: 14px;
+
+                        i {
+                            display: none;
+                            margin-right: 7px;
+                            font-size: 13px;
+                        }
                     }
-                }
-
-                .login-button {
-                    margin-top: 75px;
-                    background-color: pink;
-                    box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
-                    border-radius: 99px;
-                    padding: 5px;
-                    border: none;
-
-                    color: #162D06;
-                    font-weight: bold;
-
-                    font-size: 15px;
 
                     &:hover {
-                        transform: scale(1.1);
-                        transition: 0.25s;
+                        a {
+                            transform: scale(1.2);
+                            transition: 0.25s;
 
-                        font-size: 17px;
+                            background-color: #a5eb77;
+
+                            background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                            background-size: 200%;
+
+                            color: white;
+                        } 
+
+                        i {
+                            display: inline;
+                        }
                     }
                 }
             }
-    
         }
     }
 
 }
-*/
