--- a/CSS/blog-post-detail.css
+++ b/CSS/blog-post-detail.css
@@ -51,23 +51,24 @@ body::before, body::after {
                 height: 100%;
 
                 .gobackbutton {
-                    margin-top: 110px;
+                    margin-top: 100px;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     width: 250px;
                     margin-left: 25px;
-                    margin-bottom: 25px;
+                    margin-bottom: 15px;
 
                     a {
                         padding: 7px;
                         padding-right: 10px; 
                         padding-left: 10px;
-                        background-color: #162d06;
+                        background-color: #F39994;
                         border-radius: 10px;
 
-                        color: #F2FFEA;
+                        color: #162D06;
                         text-decoration: none;
+                        font-weight: bold;
 
                         font-size: 14px;
 
@@ -82,10 +83,16 @@ body::before, body::after {
                         a {
                             transform: scale(1.2);
                             transition: 0.25s;
+
+                            background-color: #a5eb77;
+
+                            background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                            background-size: 200%;
+
+                            color: white;
                         } 
 
                         i {
-                            transition: 0.25s;
                             display: inline;
                         }
                     }
