--- a/CSS/blog-post-detail.css
+++ b/CSS/blog-post-detail.css
@@ -218,6 +218,7 @@ body::before, body::after {
 
                 .published {
                     font-size: 20px;
+                    opacity: 75%;
                 }
             }
         }
