--- a/CSS/Admin/admin-login.css
+++ b/CSS/Admin/admin-login.css
@@ -8,66 +8,39 @@ body {
 
 .welcome-logo {
 
-    background-color: #E4F4D9;
-    background-size: 13.5%;
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 
     h1 {
         position: absolute;
-        left: 1000000px;
+        left: 10000000px;
     }
 
     .welcome-background {
+
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        height: 100vh;
+        width: 100%;
+        position: absolute;
+        left: -8px;
+        right: -8px;
 
-        .leafy-background {
-            position: absolute;
-            width: 100vh;
-            height: 100%;
-            rotate: -90deg;
-            right: 0;
-            margin-right: -8px;
+        .background-photo {
+
+            position: relative;
+            height: 100vh;
+            min-width: 100%;
 
             img {
+                min-width: 100%;
                 height: 100vh;
-                width: 100vh;
-                object-fit: cover;
-                object-position: left;
-            }
-        }
-        .leafy-background2 {
-            position: absolute;
-            width: 100vh;
-            height: 100%;
-            rotate: 90deg;
-            left: 0;
-            margin-left: -8px;
-
-            img {
-                height: 100vh;
-                width: 100vh;
-                object-fit: cover;
-                object-position: left;
-                transform: scaleX(-1);
-            }
-        }
-        .leafy-background3 {
-            position: absolute;
-            width: 100%;
-            height: 90%;
-            bottom: 0;
-            margin-bottom: -8px;
-
-            img {
-                height: 100%;
-                width: 100%;
                 object-fit: cover;
             }
         }
@@ -78,19 +51,20 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: -90px;
-        width: 100%;
-        height: 100%;
+        position: absolute;
+
+        background-color: #F2FFEA;
+        border-radius: 25px;
 
         .logo-inside-frame {
-            position: absolute;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-
-            width: 250px;
-            height: 100vh;
+            
+            width: 850px;
+            height: 500px;
+            border-radius: 10px;
     
             .login-form {
 
@@ -121,10 +95,11 @@ body {
                 }
 
                 .login-button {
+                    
                     margin-top: 50px;
-                    background-color: #F39994;
+                    background-color: #8DC892;
                     box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
-                    border-radius: 10px;
+                    border-radius: 25px;
                     padding: 5px;
                     border: none;
 
@@ -163,7 +138,7 @@ body {
                         padding-right: 10px; 
                         padding-left: 10px;
                         background-color: #F39994;
-                        border-radius: 10px;
+                        border-radius: 25px;
 
                         color: #162D06;
                         text-decoration: none;
