--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,62 +15,35 @@ body::before, body::after {
 
 .welcome-logo {
 
-    /*background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);*/
     background-color: #E4F4D9;
-    background-size: 13.5%;
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 
     .welcome-background {
+
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        height: 100vh;
+        width: 100%;
+        position: absolute;
+        left: -8px;
+        right: -8px;
 
-        .leafy-background {
-            position: absolute;
-            width: 100vh;
-            height: 100%;
-            rotate: -90deg;
-            right: 0;
-            margin-right: -8px;
+        .background-photo {
+
+            position: relative;
+            height: 100vh;
+            min-width: 100%;
 
             img {
+                min-width: 100%;
                 height: 100vh;
-                width: 100vh;
-                object-fit: cover;
-                object-position: left;
-            }
-        }
-        .leafy-background2 {
-            position: absolute;
-            width: 100vh;
-            height: 100%;
-            rotate: 90deg;
-            left: 0;
-            margin-left: -8px;
-
-            img {
-                height: 100vh;
-                width: 100vh;
-                object-fit: cover;
-                object-position: left;
-                transform: scaleX(-1);
-            }
-        }
-        .leafy-background3 {
-            position: absolute;
-            width: 100%;
-            height: 90%;
-            bottom: 0;
-            margin-bottom: -8px;
-
-            img {
-                height: 100%;
-                width: 100%;
                 object-fit: cover;
             }
         }
@@ -81,34 +54,29 @@ body::before, body::after {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: -90px;
-        width: 100%;
-        height: 100%;
+        position: absolute;
 
-        .frame {
-            position: absolute;
-            width: 980px;
-            height: 600px;
-        }
+        background-color: #F2FFEA;
+        border-radius: 25px;
 
         .logo-inside-frame {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            /*background-color: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65));*/
             width: 850px;
             height: 500px;
             border-radius: 10px;
     
             img {
-                width: 600px;
+                width: 450px;
                 height: 250px;
                 object-fit: contain;
             }
 
             h2 {
                 font-size: 30px;
+                margin-bottom: -5px;
             }
 
             h1 {
@@ -117,8 +85,14 @@ body::before, body::after {
                 flex-direction: row;
                 justify-content: center;
                 align-items: center;
-                font-size: 50px;
+                font-size: 40px;
                 color: #F39994;
+
+                text-shadow:
+                -1px -1px 0 #162D06,
+                1px -1px 0 #162D06,
+                -1px 1px 0 #162D06,
+                1px 1px 0 #162D06;
 
                 img {
                     width: 200px;
@@ -237,9 +211,15 @@ body::before, body::after {
 
             h2 {
                 font-size: 55px;
+                text-align: center;
 
                 span {
                     color: #F39994;
+                    text-shadow:
+                    -1px -1px 0 #162D06,
+                    1px -1px 0 #162D06,
+                    -1px 1px 0 #162D06,
+                    1px 1px 0 #162D06;
                 }
             }
 
@@ -335,8 +315,15 @@ body::before, body::after {
 
             h2 {
                 font-size: 55px;
+                text-align: center;
+                
                 span {
                     color: #F39994;
+                    text-shadow:
+                    -1px -1px 0 #162D06,
+                    1px -1px 0 #162D06,
+                    -1px 1px 0 #162D06,
+                    1px 1px 0 #162D06;
                 }
             }
 
