--- a/CSS/index.css
+++ b/CSS/index.css
@@ -25,83 +25,162 @@ body::before, body::after {
 
     .welcome-background {
 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        width: 100%;
+        width: 101%;
         position: absolute;
-        left: -8px;
         right: -8px;
+        left: -8px;
 
-        .background-photo {
+        .next-left {
+            position: absolute;
+            background-color: white;
+            height: 50px;
+            width: 50px;
+            border-radius: 99px;
+            top: 50%;
+            z-index: 99;
+            left: 10%;
+
+            color: #162D06;
+            border: solid #162D06 2px;
+
+            cursor: pointer;
+        }
+
+        .next-right {
+            position: absolute;
+            background-color: white;
+            height: 50px;
+            width: 50px;
+            border-radius: 99px;
+            top: 50%;
+            z-index: 99;
+            right: 10%;
+
+            color: #162D06;
+            border: solid #162D06 2px;
+
+            cursor: pointer;
+        }
+
+        .progress-bar {
+            position: absolute;
+            z-index: 99px;
+            top: 90%;
+            width: 125px;
+            background-color: white;
+            height: 25px;
+            left: 45%;
+            border-radius: 99px;
+
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .dot {
+            display: flex;
+            flex-direction: row;
+
+            height: 10px;
+            width: 10px;
+            background-color: #162D06;
+            border-radius: 50%;
+            margin: 0 5px;
+            opacity: 0.5;
+            transition: opacity 0.3s ease;
+
+        }
+        
+
+        .homepage-slideshow {
+
+            transition: opacity 0.3s ease;
 
             position: relative;
             height: 100vh;
             min-width: 100%;
 
-            img {
-                min-width: 100%;
+            .background-photo {
+
+                transition: opacity 0.3s ease;
+
+
+                position: relative;
                 height: 100vh;
-                object-fit: cover;
-            }
-        }
-    }
-
-    .framed-logo {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-
-        background-color: #F2FFEA;
-        border-radius: 25px;
-
-        .logo-inside-frame {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 850px;
-            height: 500px;
-            border-radius: 10px;
+                min-width: 100%;
     
-            img {
-                width: 450px;
-                height: 250px;
-                object-fit: contain;
-            }
-
-            h2 {
-                font-size: 30px;
-                margin-bottom: -5px;
-            }
-
-            h1 {
-                margin-top: -5px;
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-                font-size: 40px;
-                color: #F39994;
-
-                text-shadow:
-                -1px -1px 0 #162D06,
-                1px -1px 0 #162D06,
-                -1px 1px 0 #162D06,
-                1px 1px 0 #162D06;
-
                 img {
-                    width: 200px;
-                    height: 75px;
+
+                    transition: opacity 0.3s ease;
+
+                    min-width: 100%;
+                    height: 100vh;
+                    object-fit: cover;
                 }
             }
+    
+            .framed-logo {
+
+                transition: opacity 0.3s ease;
+
+                top: 25%;
+                left: 25%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                z-index: 99;
+        
+                background-color: #F2FFEA;
+                border-radius: 25px;
+        
+                .logo-inside-frame {
+                    
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    width: 850px;
+                    height: 500px;
+                    border-radius: 10px;
+            
+                    img {
+                        width: 350px;
+                        height: 250px;
+                        object-fit: contain;
+                    }
+        
+                    h2 {
+                        font-size: 27px;
+                        margin-bottom: -5px;
+                    }
+        
+                    h1 {
+                        margin-top: -5px;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-items: center;
+                        font-size: 35px;
+                        color: #F39994;
+        
+                        text-shadow:
+                        -1px -1px 0 #162D06,
+                        1px -1px 0 #162D06,
+                        -1px 1px 0 #162D06,
+                        1px 1px 0 #162D06;
+        
+                        img {
+                            width: 145px;
+                            height: 60px;
+                        }
+                    }
+                }
+            }   
         }
     }
-
 }
 
 .main-content {
