--- a/CSS/index.css
+++ b/CSS/index.css
@@ -26,6 +26,11 @@ body::before, body::after {
     .welcome-background {
 
         width: 101%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
         position: absolute;
         right: -8px;
         left: -8px;
@@ -36,14 +41,22 @@ body::before, body::after {
             height: 50px;
             width: 50px;
             border-radius: 99px;
-            top: 50%;
-            z-index: 99;
+
+            z-index: 998;
             left: 10%;
 
             color: #162D06;
             border: solid #162D06 2px;
 
             cursor: pointer;
+            font-size: 17px;
+
+            &:hover {
+                font-size: 30px;
+                transition: 0.25s;
+
+                transform: scale(1.1);
+            }
         }
 
         .next-right {
@@ -52,14 +65,22 @@ body::before, body::after {
             height: 50px;
             width: 50px;
             border-radius: 99px;
-            top: 50%;
-            z-index: 99;
+            z-index: 998;
+
             right: 10%;
 
             color: #162D06;
             border: solid #162D06 2px;
 
             cursor: pointer;
+            font-size: 17px;
+
+            &:hover {
+                font-size: 30px;
+                transition: 0.25s;
+
+                transform: scale(1.1);
+            }
         }
 
         .progress-bar {
@@ -69,7 +90,7 @@ body::before, body::after {
             width: 125px;
             background-color: white;
             height: 25px;
-            left: 45%;
+
             border-radius: 99px;
 
             display: flex;
@@ -85,13 +106,13 @@ body::before, body::after {
             height: 10px;
             width: 10px;
             background-color: #162D06;
-            border-radius: 50%;
+            border-radius: 99px;
             margin: 0 5px;
             opacity: 0.5;
             transition: opacity 0.3s ease;
 
+            cursor: pointer;
         }
-        
 
         .homepage-slideshow {
 
@@ -105,15 +126,12 @@ body::before, body::after {
 
                 transition: opacity 0.3s ease;
 
-
                 position: relative;
                 height: 100vh;
                 min-width: 100%;
     
                 img {
-
                     transition: opacity 0.3s ease;
-
                     min-width: 100%;
                     height: 100vh;
                     object-fit: cover;
@@ -123,18 +141,18 @@ body::before, body::after {
             .framed-logo {
 
                 transition: opacity 0.3s ease;
+                width: 100%;
+                height: 45%;
 
-                top: 25%;
-                left: 25%;
                 display: flex;
-                flex-direction: column;
+
                 justify-content: center;
                 align-items: center;
+
+                top: 30%;
                 position: absolute;
                 z-index: 99;
         
-                background-color: #F2FFEA;
-                border-radius: 25px;
         
                 .logo-inside-frame {
                     
@@ -142,9 +160,12 @@ body::before, body::after {
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    width: 850px;
-                    height: 500px;
+                    width: 700px;
+                    height: 400px;
                     border-radius: 10px;
+
+                    background-color: #F2FFEA;
+                    border-radius: 25px;
             
                     img {
                         width: 350px;
@@ -175,6 +196,26 @@ body::before, body::after {
                         img {
                             width: 145px;
                             height: 60px;
+                        }
+                    }
+
+                    h3 {
+                        font-size: 45px;
+
+                        a {
+                            text-decoration: none;
+                            color: #F39994;
+                            
+                            text-shadow:
+                            -1px -1px 0 #162D06,
+                            1px -1px 0 #162D06,
+                            -1px 1px 0 #162D06,
+                            1px 1px 0 #162D06;
+                        }
+
+                        &:hover {
+                            transform: scale(1.2);
+                            transition: 0.25s;
                         }
                     }
                 }
