--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -160,12 +160,7 @@ body::before, body::after {
 
             span {
                 color: #F39994;
-
-                text-shadow:
-                -1px -1px 0 #162D06,
-                1px -1px 0 #162D06,
-                -1px 1px 0 #162D06,
-                1px 1px 0 #162D06;
+                -webkit-text-stroke: 1px #162D06;
             }
         }
 
