--- a/CSS/Admin/admin-create.css
+++ b/CSS/Admin/admin-create.css
@@ -24,31 +24,19 @@ body {
     }
 
     .framed-logo {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        .frame {
-            position: absolute;
-            width: 1100px;
-            height: 700px;
-        }
 
         .logo-inside-frame {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+
             background-color: #F7FFF2;
-            width: 100vh;
+            width: 125vh;
             height: 100vh;
-            border-radius: 10px;
-            padding: 25px;
 
             .inside {
                 width: 100vh;
-                position: absolute;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
@@ -56,6 +44,49 @@ body {
                 .inside-left {
                     display: flex;
                     flex-direction: column;
+
+                    .gobackbutton {
+                        width: 250px;
+    
+                        a {
+                            padding: 7px;
+                            padding-right: 10px; 
+                            padding-left: 10px;
+                            background-color: #F39994;
+                            border-radius: 25px;
+    
+                            color: #162D06;
+                            text-decoration: none;
+                            font-weight: bold;
+    
+                            font-size: 14px;
+                            font-family: "Libre Bodoni", serif;
+    
+                            i {
+                                display: none;
+                                margin-right: 7px;
+                                font-size: 13px;
+                            }
+                        }
+    
+                        &:hover {
+                            a {
+                                transform: scale(1.2);
+                                transition: 0.15s;
+    
+                                background-color: #a5eb77;
+    
+                                background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                                background-size: 200%;
+    
+                                color: white;
+                            } 
+    
+                            i {
+                                display: inline;
+                            }
+                        }
+                    }
                 }
 
                 .inside-right {
@@ -74,66 +105,68 @@ body {
 
 }
 
-.gobackbutton {
-    margin-top: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 250px;
-    margin-left: 25px;
-    margin-bottom: 15px;
-
-    a {
-        padding: 7px;
-        padding-right: 10px; 
-        padding-left: 10px;
-        background-color: #F39994;
-        border-radius: 10px;
-
-        color: #162D06;
-        text-decoration: none;
-        font-weight: bold;
-
-        font-size: 14px;
-
-        i {
-            display: none;
-            margin-right: 7px;
-            font-size: 13px;
-        }
-    }
-
-    &:hover {
-        a {
-            transform: scale(1.2);
-            transition: 0.25s;
-
-            background-color: #a5eb77;
-
-            background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
-            background-size: 200%;
-
-            color: white;
-        } 
-
-        i {
-            display: inline;
-        }
-    }
-}
 
 .main-title, .snd-title, .blog-p, .blog-tags, .picture-upload, .picture-alt {
     font-size: 20px;
     margin-top: 50px;
+
+    font-family: "Libre Bodoni", serif;
+    
 }
 
 .main-title-box, .snd-title-box, .blog-p-box, .blog-tags-box, .picture-upload-box, .picture-alt-box {
     display: flex;
     flex-direction: column;
     gap: 15px;
+
+    input {
+        border-radius: 5px;
+        border: solid 1px #162D06;
+        height: 25px;
+
+        font-family: "Libre Bodoni", serif;
+
+        padding-left: 5px;
+    }
 }
 
 .blog-p-box #blogText {
     width: 500px;
     height: 400px;
+
+    border-radius: 5px;
+    border: solid 1px #162D06;
+
+    font-family: "Libre Bodoni", serif;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+
+.postnewblog {
+    margin-top: 50px;
+
+    background-color: #8DC892;
+    border-radius: 99px;
+    padding: 5px;
+    font-family: "Libre Bodoni", serif;
+    font-size: 17px;
+
+    border: none;
+    cursor: pointer;
+    box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
+
+    &:hover {
+        transform: scale(1.1);
+        transition: 0.25s;
+
+        font-size: 17px;
+        cursor: pointer;
+
+        background-color: #a5eb77;
+
+        background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+        background-size: 100%;
+
+        color: white;
+    }
 }
