--- a/CSS/Admin/admin-login.css
+++ b/CSS/Admin/admin-login.css
@@ -4,6 +4,8 @@ body {
     overflow: hidden;
 
     color: #162D06;
+
+    font-family: "Libre Bodoni", serif;
 }
 
 .welcome-logo {
@@ -89,6 +91,7 @@ body {
                         font-size: 12px;
 
                         color: #162D06;
+                        font-family: "Libre Bodoni", serif;
 
                         box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
                     }
@@ -96,6 +99,8 @@ body {
 
                 .login-button {
                     
+                    font-family: "Libre Bodoni", serif;
+
                     margin-top: 50px;
                     background-color: #8DC892;
                     box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
@@ -132,6 +137,7 @@ body {
                     flex-direction: column;
                     align-items: center;
                     margin-bottom: 15px;
+                    
 
                     a {
                         padding: 7px;
@@ -143,6 +149,8 @@ body {
                         color: #162D06;
                         text-decoration: none;
                         font-weight: bold;
+
+                        font-family: "Libre Bodoni", serif;
 
                         font-size: 14px;
 
