--- a/CSS/header.css
+++ b/CSS/header.css
@@ -20,9 +20,13 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
     margin-left: 7%;
     margin-right: 7%;
+
     font-family: "libre Bodoni", serif;
+
+    font-size: 15px;
     
     .searchbar-header {
 
@@ -33,6 +37,13 @@ nav {
         align-items: center;
         text-align: left;
         margin-right: 20px;
+
+        margin-top: 15px;
+        width: 345px;
+        height: 25px;
+        border-radius: 25px;
+        box-shadow: 5px 1px 15px 5px rgba(2, 101, 19, 0.154);
+
 
         .searchbar-header-content {
             display: flex;
@@ -62,7 +73,6 @@ nav {
             height: 25px;
             z-index: 800;
 
-            box-shadow: 5px 1px 15px 5px rgba(2, 101, 19, 0.154);
         }
 
         .search-results {
@@ -70,15 +80,34 @@ nav {
             border-radius: 10px 10px 10px 10px;
             padding-bottom: 5px;
             padding-top: 20px;
-            width: 361px;
+            width: 356px;
             max-height: 310px;
+
             overflow-y: scroll;
             position: absolute;
+
             top: 100%;
-            margin-top: -32px;
+            margin-top: -20px;
+            margin-left: -5px;
+
             left: 0;
             z-index: 99;
             box-shadow: 5px 1px 15px 5px rgba(2, 101, 19, 0.154);
+
+            font-family: "Libre Bodoni", serif;
+        }
+
+        ::-webkit-scrollbar {
+            background-color: #d5eac7;
+
+            border-radius: 0px 99px 10px 0px;
+            width: 10px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: #162D06;
+
+            border-radius: 99px;
         }
         
         .search-results h2 {
@@ -97,16 +126,23 @@ nav {
         .search-results h2:hover {
             background-color: pink;
             cursor: pointer;
+
         }
         
         #searchInput::placeholder {
-            padding-left: 10px;
+            padding-left: 5px;
             color: #162D06;
         }
         
         #searchInput {
-            padding-left: 10px;
             color: #162D06;
+            padding-left: 5px;
+
+            font-family: "Libre Bodoni", serif;
+
+            border: none;
+            outline: none;
+
         }
 
     }
