--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,6 +7,19 @@ body {
     color: #162D06;
 }
 
+::-webkit-scrollbar {
+    background-color: #d5eac7;
+
+    border-radius: 0px 99px 10px 0px;
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #162D06;
+
+    border-radius: 99px;
+}
+
 body::before, body::after {
     content: '';
     display: table;
@@ -60,6 +73,8 @@ body::before, body::after {
                 transition: 0.25s;
 
                 transform: scale(1.1);
+
+                background-color: pink;
             }
         }
 
@@ -84,6 +99,8 @@ body::before, body::after {
                 transition: 0.25s;
 
                 transform: scale(1.1);
+
+                background-color: pink;
             }
         }
 
@@ -174,8 +191,12 @@ body::before, body::after {
                     }
         
                     h2 {
-                        font-size: 27px;
-                        margin-bottom: -5px;
+                        font-size: 25px;
+                        margin-bottom: -10px;
+
+                        font-family: "Libre Bodoni", serif;
+                        font-weight: normal;
+
                     }
         
                     h1 {
@@ -189,7 +210,9 @@ body::before, body::after {
         
                         -webkit-text-stroke: 1px #162D06;
 
-    
+                        font-family: "Libre Bodoni", serif;
+                        font-weight: bold;
+
                         img {
                             width: 145px;
                             height: 60px;
@@ -198,6 +221,9 @@ body::before, body::after {
 
                     h3 {
                         font-size: 45px;
+
+                        font-family: "Libre Bodoni", serif;
+                        font-weight: normal;
 
                         a {
                             text-decoration: none;
@@ -212,6 +238,57 @@ body::before, body::after {
                         }
                     }
                 }
+
+                .logo-inside-frame2 {
+                    
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    width: 650px;
+                    height: 275px;
+                    border-radius: 10px;
+
+                    background-color: #F2FFEA;
+                    border-radius: 25px;
+
+                    text-decoration: none;
+                    color: #162D06;
+                    
+        
+                    h2 {
+                        margin-top: 50px;
+                        font-size: 25px;
+
+                        font-family: "Libre Bodoni", serif;
+                        font-weight: normal;
+
+                    }
+
+                    h3 {
+                        font-size: 45px;
+                        margin-top: -5px;
+
+                        font-family: "Libre Bodoni", serif;
+                        font-weight: normal;
+
+                        color: #F39994;
+                        -webkit-text-stroke: 1px #162D06;
+                    }
+
+                    &:hover {
+                        transform: scale(1.2);
+
+                        transition: ease-in-out 0.45s;
+
+                        height: 250px;
+    
+                        h3 {
+                            font-size: 55px;
+                            margin-top: 0px;
+                        }
+                    }
+                }
             }   
         }
     }
@@ -221,7 +298,7 @@ body::before, body::after {
 
     z-index: 2;
     margin-top: 100vh;
-    box-shadow: 10px 1px 50px 5px rgba(2, 101, 19, 0.154);
+    box-shadow: 10px 1px 50px 5px rgba(1, 56, 10, 0.396);
 
     background-color: #F2FFEA;
     display: flex;
@@ -278,6 +355,9 @@ body::before, body::after {
                         border-radius: 10px;
                         width: 250px;
 
+                        font-family: "Libre Bodoni", serif;
+                        font-weight: normal;
+
                         h2 {
                             font-size: 25px;
                             color: #162D06;
@@ -331,6 +411,9 @@ body::before, body::after {
             color: #162D06;
             margin-top: 75px;
 
+            font-family: "Libre Bodoni", serif;
+            font-weight: normal;
+
             h2 {
                 font-size: 55px;
                 text-align: center;
@@ -345,6 +428,9 @@ body::before, body::after {
                 width: 1200px;
                 overflow-x: scroll;
                 margin-top: -50px;
+
+                font-family: "Libre Bodoni", serif;
+                font-weight: normal;
 
                 .newly-posted {
 
@@ -362,7 +448,7 @@ body::before, body::after {
 
                         border-radius: 10px;
                         height: 600px;
-                        width: 315px;
+                        width: 335px;
 
                         .blog-link {
                             text-decoration: none;
@@ -383,7 +469,7 @@ body::before, body::after {
                         }
         
                         img {
-                            width: 315px;
+                            width: 335px;
                             height: 420px;
                             object-fit: cover;
                             border-radius: 10px 10px 0px 0px;
@@ -395,6 +481,7 @@ body::before, body::after {
 
                         .published {
                             opacity: 65%;
+                            font-size: 12px;
                         }
                     }
 
@@ -428,6 +515,9 @@ body::before, body::after {
 
             color: #162D06;
             margin-top: 75px;
+
+            font-family: "Libre Bodoni", serif;
+            font-weight: normal;
 
             h2 {
                 font-size: 55px;
@@ -492,7 +582,8 @@ body::before, body::after {
                 display: flex;
                 flex-direction: row;
                 flex-wrap: wrap;
-                justify-content: space-between;
+                justify-content: flex-start;
+                
                 width: 100%;
                 gap: 10px;
 
@@ -504,10 +595,12 @@ body::before, body::after {
                     height: 425px;
                     width: 285px;
                     margin-bottom: 2.5%;
+                    
     
                     a {
                         text-decoration: none;
                         color: #162D06;
+                        
                     }
 
                     .post-textbox {
@@ -518,14 +611,14 @@ body::before, body::after {
                         text-align: center;
 
                         margin-top: 10px;
-                        height: 140px;
+                        height: 130px;
                         margin-left: 5px;
                         margin-right: 5px;
                     }
 
                     .published {
                         opacity: 75%;
-                        font-size: 13px;
+                        font-size: 10px;
                     }
     
                     img {
@@ -570,40 +663,6 @@ body::before, body::after {
 
 @media (max-width:1150px) {
     .main-content {    
-        .un-scroll-content {
-            min-width: 250px;
-        
-            .right-s-content {
-        
-                .right-s-background {
-                    width: 250px;
-        
-                    .right-s-box {
-        
-                        .right-s-text {
-                            width: 220px;
-    
-                            h2 {
-                                font-size: 20px;
-    
-                            }
-    
-                            img {
-                                width: 100px;
-                                height: 134px;
-                            }
-        
-                            p {
-                                margin-top: 5px;
-                                margin-left: 5px;
-                                margin-right: 5px;
-                                font-size: 12px;
-                            }
-                        }
-                    }
-                }
-            }
-        }
     
         .scroll-content {
     
