--- a/CSS/Admin/blog-post.css
+++ b/CSS/Admin/blog-post.css
@@ -6,6 +6,19 @@ body {
     color: #162D06;
 }
 
+::-webkit-scrollbar {
+    background-color: #d5eac7;
+
+    border-radius: 0px 99px 10px 0px;
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #162D06;
+
+    border-radius: 99px;
+}
+
 body::before, body::after {
     content: '';
     display: table;
@@ -13,6 +26,9 @@ body::before, body::after {
 }
 
 .main-content {
+
+    font-family: "Libre Bodoni", serif;
+
 
     background-color: #F2FFEA;
     display: flex;
@@ -52,13 +68,13 @@ body::before, body::after {
                 width: 300px;
 
                 .gobackbutton {
-                    margin-top: 100px;
+                    margin-top: 125px;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     width: 250px;
                     margin-left: 25px;
-                    margin-bottom: 10px;
+                    margin-bottom: 15px;
 
                     a {
                         padding: 7px;
@@ -84,10 +100,16 @@ body::before, body::after {
                         a {
                             transform: scale(1.2);
                             transition: 0.25s;
+
+                            background-color: #a5eb77;
+
+                            background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                            background-size: 200%;
+
+                            color: white;
                         } 
 
                         i {
-                            transition: 0.25s;
                             display: inline;
                         }
                     }
@@ -109,6 +131,7 @@ body::before, body::after {
                         border-radius: 10px;
                         width: 250px;
                         min-height: 500px;
+                        margin-top: 25px;
 
                         .blog-post-buttons {
 
@@ -120,6 +143,7 @@ body::before, body::after {
                                 width: 120px;
                                 cursor: pointer;
                                 font-weight: bold;
+                                font-family: "Libre Bodoni", serif;
 
                                 &:hover {
                                     transition: 0.25s;
@@ -135,6 +159,7 @@ body::before, body::after {
                                 width: 120px;
                                 cursor: pointer;
                                 font-weight: bold;
+                                font-family: "Libre Bodoni", serif;
 
                                 &:hover {
                                     transition: 0.25s;
@@ -207,11 +232,21 @@ body::before, body::after {
 
                 h3 {
                     font-size: 30px;
+                    font-family: "Libre Bodoni", serif;
                 }
 
                 input {
                     width: 100%;
+                    border-radius: 25px;
+                    border: solid 1px #162D06;
+
+                    padding: 5px;
+                    font-family: "Libre Bodoni", serif;
                 }
+            }
+
+            .title-container input, .tags-container input {
+                width: 700px;
             }
 
             .media-container {
@@ -219,12 +254,21 @@ body::before, body::after {
                 h3 {
                     margin-left: 9%;
                     margin-right: 3.5%;
+
+                    font-size: 25px;
+                    font-family: "Libre Bodoni", serif;
                 }
 
                 input {
                     margin-left: 9%;
                     margin-right: 3.5%;
                     width: 700px;
+
+                    border-radius: 25px;
+                    border: solid 1px #162D06;
+
+                    padding: 5px;
+                    font-family: "Libre Bodoni", serif;
                 }
 
                 .image-preview {
@@ -249,12 +293,21 @@ body::before, body::after {
                 margin-bottom: 50px;
                 margin-top: 50px;
             }
+
             .body-container {
                 margin-bottom: 50px;
 
                 .edit-textarea {
                     height: 600px;
                     width: 100%;
+
+                    border-radius: 25px;
+                    border: solid 1px #162D06;
+                }
+
+                textarea {
+                    padding-left: 10px;
+                    padding-top: 10px;
                 }
             }
         }
