--- a/CSS/header.css
+++ b/CSS/header.css
@@ -132,6 +132,7 @@ nav {
         #searchInput::placeholder {
             padding-left: 5px;
             color: #162D06;
+            font-size: 12px;
         }
         
         #searchInput {
