--- a/CSS/Admin/admin-page.css
+++ b/CSS/Admin/admin-page.css
@@ -13,6 +13,19 @@ body::before, body::after {
     clear: both;
 }
 
+::-webkit-scrollbar {
+    background-color: #d5eac7;
+
+    border-radius: 0px 99px 10px 0px;
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #162D06;
+
+    border-radius: 99px;
+}
+
 .main-content {
 
     background-color: #F2FFEA;
@@ -71,10 +84,15 @@ body::before, body::after {
                         align-items: center;
                         border-radius: 10px;
                         width: 250px;
-                        height: 80vh;
+
+                        font-family: "Libre Bodoni", serif;
+                        font-weight: normal;
+
+                        color: #162D06;
 
                         h2 {
                             text-align: center;
+                            font-size: 22px;
                         }
     
                         img {
@@ -83,12 +101,11 @@ body::before, body::after {
                             object-fit: contain;
                             background-color: white;
                             border-radius: 99px;
-                            margin-bottom: 25px;
                         }
 
                         .admin-button {
                             padding: 10px;
-                            border-radius: 10px;
+                            border-radius: 99px;
                             margin-top: 25px;
                             text-decoration: none;
                             color: #162D06;
@@ -99,20 +116,38 @@ body::before, body::after {
 
                         #create-button {
                             background-color: #9AE5B5;
+                            font-size: 14px;
+                            text-align: center;
+
                             &:hover {
-                                transform: scale(1.1);
-                                transition: 0.2s;
-                                color: #F2FFEA;
-                                background-color: #2c8a3f;
+                                transform: scale(1.2);
+                                transition: 0.25s;
+    
+                                background-color: #a5eb77;
+    
+                                background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                                background-size: 100%;
+    
+                                color: white;
                             }
                         }
+
                         #loggout-button {
-                            background-color: #E4F4D9;
+                            background-color: #EE4444;
+                            font-size: 14px;
+                            text-align: center;
+
                             &:hover {
-                                transform: scale(1.1);
-                                transition: 0.2s;
-                                color: #F2FFEA;
-                                background-color: #162D06;
+                                transform: scale(1.2);
+                                transition: 0.25s;
+                                font-weight: bolder;
+    
+                                background-color: #b42e2e;
+    
+                                background-image: linear-gradient(to bottom, rgba(238, 68, 68, 0.75), rgba(238, 68, 68, 0.75)),url(/MEDIA/background/backgroundleafes.png);
+                                background-size: 125%;
+    
+                                color: white;
                             }
                         }
     
@@ -120,7 +155,7 @@ body::before, body::after {
                             margin-left: 30px;
                             width: 100%;
                             padding-bottom: 25px;
-                            margin-top: 225px;
+                            margin-top: 210px;
     
                             span {
                                 font-weight: bold;
@@ -136,86 +171,161 @@ body::before, body::after {
         }
     }
 
-    .all-blogs {
+    .scroll-content {
+        width: 100%;
 
-        margin-top: 90px;
-        margin-left: 7%;
-        margin-right: 25px;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 25px;
-        margin-bottom: 100px;
+        flex-direction: column;
+        align-items: center;
 
-        .blog-post {
-            background-color: #F1F8F3;
-            height: 590px;
-            width: 350px;
-            border-radius: 10px;
-            box-shadow: 2px 2px 7px 2px rgba(2, 57, 11, 0.306);
-
-            img {
-                height: 400px;
+        .searchbar {
+            margin-top: 75px;
+    
+            width: 355px;
+            height: 27px;
+    
+            background-color: white;
+            box-shadow: 5px 1px 15px 5px rgba(2, 101, 19, 0.154);
+            border-radius: 25px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+    
+            input {
+                border-radius: 25px;
                 width: 350px;
-                object-fit: cover;
-                border-radius: 10px 10px 0px 0px;
+                height: 25px;
+                border: hidden;
+                background-color: none;
+    
             }
-
-            .post-textbox {
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                align-items: center;
-                text-align: center;
-                height: 190px;
-                margin-left: 5px;
+    
+            #searchInput::placeholder {
+                padding-left: 5px;
+    
+                font-family: "Libre Bodoni", serif;
+                font-weight: normal;
+            }
+    
+            #searchInput {
+                height: 25px;
+    
+                font-family: "Libre Bodoni", serif;
+                font-weight: normal;
+            }
+    
+            i {
                 margin-right: 5px;
-
-                .main-title {
-                    font-weight: bold;
-                }
-
-                .title {
-                    font-size: 20px;
-                }
-
-                .published {
-                    opacity: 75%;
-                    font-size: 14px;
-                }
+                width: 30px;
+                height: 25px;
+    
+                display: flex;
+    
+                justify-content: center;
+                align-items: center;
             }
         }
+    
+        .all-blogs {
 
-        .blog-post:hover {
-            background-color: white;
-            transition: 0.25s;
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+    
+            margin-top: 50px;
 
-            img {
-                height: 475px;
-                transition: ease-in-out 0.25s;
-            }
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
 
-            .post-textbox {
-                transition: 0.25s;
-
-                height: 115px;
-
-                .title {
-                    font-size: 22px;
-                    margin-top: 0px;
+            gap: 25px;
+            margin-bottom: 100px;
+    
+            .blog-post {
+                background-color: #F1F8F3;
+                height: 590px;
+                width: 350px;
+                border-radius: 10px;
+                box-shadow: 2px 2px 7px 2px rgba(2, 57, 11, 0.306);
+    
+                img {
+                    height: 400px;
+                    width: 350px;
+                    object-fit: cover;
+                    border-radius: 10px 10px 0px 0px;
                 }
-
-                .published {
+    
+                .post-textbox {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: center;
+                    text-align: center;
+                    height: 190px;
+                    margin-left: 5px;
+                    margin-right: 5px;
+    
+    
+                    .title {
+                        font-size: 20px;
+                    }
+    
+                    .published {
+                        opacity: 75%;
+                        font-size: 14px;
+                    }
+                }
+            }
+    
+            .blog-post:hover {
+                background-color: white;
+                transition: 0.25s;
+    
+                img {
+                    height: 475px;
+                    transition: ease-in-out 0.25s;
+                }
+    
+                .post-textbox {
+                    transition: 0.25s;
+    
+                    height: 115px;
+    
+                    .title {
+                        font-size: 22px;
+                        margin-top: 0px;
+                    }
+    
+                    .published {
+                        display: none;
+                    }
+                }
+    
+                .title {
                     display: none;
                 }
             }
+    
+            
+            .blog-post:hover::after {
+                content: "Edit Post";
+                font-size: 25px;
+                width: 350px;
+                margin-top: -75px;
+                font-weight: bolder;
+    
+                text-align: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+    
+            .blog-link {
+                text-decoration: none;
+                color: #162D06;
+            }
+    
         }
-
-        .blog-link {
-            text-decoration: none;
-            color: #162D06;
-        }
-
     }
 
 }
