--- a/CSS/blog-post-detail.css
+++ b/CSS/blog-post-detail.css
@@ -12,6 +12,19 @@ body::before, body::after {
     clear: both;
 }
 
+::-webkit-scrollbar {
+    background-color: #d5eac7;
+
+    border-radius: 0px 99px 10px 0px;
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #162D06;
+
+    border-radius: 99px;
+}
+
 .main-content {
 
     background-color: #F2FFEA;
@@ -64,7 +77,7 @@ body::before, body::after {
                         padding-right: 10px; 
                         padding-left: 10px;
                         background-color: #F39994;
-                        border-radius: 10px;
+                        border-radius: 99px;
 
                         color: #162D06;
                         text-decoration: none;
@@ -86,7 +99,7 @@ body::before, body::after {
 
                             background-color: #a5eb77;
 
-                            background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                            background-image: linear-gradient(to bottom, rgba(62, 93, 42, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
                             background-size: 200%;
 
                             color: white;
@@ -94,6 +107,7 @@ body::before, body::after {
 
                         i {
                             display: inline;
+                            margin-right: 0px;
                         }
                     }
                 }
@@ -113,8 +127,14 @@ body::before, body::after {
                         border-radius: 10px;
                         width: 250px;
 
+                        font-family: "Libre Bodoni", serif;
+                        font-weight: normal;
+
+                        color: #162D06;
+
                         h2 {
                             text-align: center;
+                            font-size: 22px;
                         }
     
                         img {
@@ -126,11 +146,11 @@ body::before, body::after {
                         }
     
                         p {
-                            margin-bottom: 25px;
-                            margin-top: 10px;
+                            margin-bottom: 0px;
+                            margin-top: 25px;
                             margin-left: 10px;
-                            margin-right: 5px;
-                            font-size: 15px;
+                            margin-right: 10px;
+                            font-size: 13px;
                         }
 
                         .redirect-link {
@@ -149,24 +169,31 @@ body::before, body::after {
                                 width: 165px;
                                 text-align: center;
                                 padding: 5px;
-                                border-radius: 10px;
+                                border-radius: 99px;
 
                                 background-color: #9AE5B5;
                                 box-shadow: 2px 2px 7px 2px rgba(2, 57, 11, 0.306);
 
                                 &:hover {
-                                    transform: scale(1.1);
-                                    transition: 0.2s;
-                                    color: #F2FFEA;
-                                    background-color: #2c8a3f;
+                                    transform: scale(1.2);
+                                    transition: 0.25s;
+        
+                                    background-color: #a5eb77;
+        
+                                    background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                                    background-size: 100%;
+        
+                                    color: white;
                                 }
+
                             }
                         }
     
                         .right-s-info {
                             width: 100%;
-                            padding-bottom: 5px;
+                            padding-bottom: 25px;
                             margin-top: 50px;
+                            line-height: 5px;
     
                             #lastPosted, #totalPosts {
                                 font-weight: 400;
@@ -184,8 +211,8 @@ body::before, body::after {
 
     .scroll-content {
         width: 80%;
-        margin-top: 80px;
         margin-left: -8px;
+        top: 0;
 
         .blog-detail {
 
@@ -195,9 +222,10 @@ body::before, body::after {
             .blog-post-detail {
 
                 width: 100%;
+                margin-top: -8px;
                 img {
                     width: 1400px;
-                    height: 475px;
+                    height: 555px;
                     object-fit: cover;
                 }
 
