--- a/CSS/Admin/blog-post.css
+++ b/CSS/Admin/blog-post.css
@@ -68,7 +68,7 @@ body::before, body::after {
                 width: 300px;
 
                 .gobackbutton {
-                    margin-top: 125px;
+                    margin-top: 120px;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
@@ -81,7 +81,7 @@ body::before, body::after {
                         padding-right: 10px; 
                         padding-left: 10px;
                         background-color: #F39994;
-                        border-radius: 10px;
+                        border-radius: 99px;
 
                         color: #162D06;
                         text-decoration: none;
@@ -103,7 +103,7 @@ body::before, body::after {
 
                             background-color: #a5eb77;
 
-                            background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                            background-image: linear-gradient(to bottom, rgba(62, 93, 42, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
                             background-size: 200%;
 
                             color: white;
@@ -111,6 +111,7 @@ body::before, body::after {
 
                         i {
                             display: inline;
+                            margin-right: 0px;
                         }
                     }
                 }
@@ -137,34 +138,56 @@ body::before, body::after {
 
                             .save-button {
                                 background-color: #9AE5B5;
-                                border-radius: 10px;
-                                padding: 4px;
+                                border-radius: 99px;
                                 border: none;
-                                width: 120px;
+
+                                height: 35px;
+                                width: 150px;
+                                font-size: 15px;
+
                                 cursor: pointer;
+
                                 font-weight: bold;
                                 font-family: "Libre Bodoni", serif;
 
                                 &:hover {
-                                    transition: 0.25s;
                                     transform: scale(1.1);
-                                    box-shadow: 2px 2px 10px 2px rgba(0, 42, 7, 0.154);
+                                    transition: 0.25s;
+        
+                                    background-color: #a5eb77;
+        
+                                    background-image: linear-gradient(to bottom, rgba(75, 106, 55, 0.65), rgba(75, 106, 55, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                                    background-size: 100%;
+        
+                                    color: white;
                                 }
                             }
                             .delete-button {
                                 background-color: #EE4444;
-                                border-radius: 10px;
-                                padding: 4px;
+                                border-radius: 99px;
                                 border: none;
-                                width: 120px;
+
+                                height: 35px;
+                                width: 150px;
+                                font-size: 15px;
+
                                 cursor: pointer;
+
                                 font-weight: bold;
                                 font-family: "Libre Bodoni", serif;
 
                                 &:hover {
-                                    transition: 0.25s;
                                     transform: scale(1.1);
-                                    box-shadow: 2px 2px 10px 2px rgba(0, 42, 7, 0.154);
+
+                                    transition: 0.25s;
+                                    font-weight: bolder;
+        
+                                    background-color: #b42e2e;
+        
+                                    background-image: linear-gradient(to bottom, rgba(238, 68, 68, 0.75), rgba(238, 68, 68, 0.75)),url(/MEDIA/background/backgroundleafes.png);
+                                    background-size: 125%;
+        
+                                    color: white;
                                 }
                             }
                         }
@@ -217,9 +240,9 @@ body::before, body::after {
 
     .scroll-content {
         width: 100%;
-        margin-top: 80px;
         margin-bottom: 100px;
         margin-left: -8px;
+        margin-top: -8px;
 
         .admin-blog-detail {
             display: flex;
@@ -275,7 +298,7 @@ body::before, body::after {
                     width: 100%;
                     margin-left: 0px;
                     margin-right: 0px;
-                    height: 500px;
+                    height: 555px;
                     margin-top: 0px;
     
                 }
@@ -298,7 +321,7 @@ body::before, body::after {
                 margin-bottom: 50px;
 
                 .edit-textarea {
-                    height: 600px;
+                    height: 450px;
                     width: 100%;
 
                     border-radius: 25px;
